# gpt4_vision_playground

./: README.md  aa.html  pyproject.toml
gpt4_vision_playgrund/: config.py  html_utils.py  vision_utils.py
notebooks/: generate_html_from_skeleton_image.ipynb  generate_html_skeleton.ipynb  image_generation.py
